[package]
name = "aoc-2019"
version = "0.1.0"
authors = ["Emily Curry <emily@curry.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [
  "aoc-01", 
  "aoc-02", 
  "aoc-03",  
  "aoc-04", 
  "aoc-05", 
  "intcode", 
  "aoc-util",
]

[dependencies]
